# phishtank-lookup

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: install.yml  mypy.yml  test_api.yml
cache/: cache.conf
config/: generic.json.sample
etc/logrotate.d/: phishtank
etc/systemd/system/: phishtank-lookup.service.sample
phishtank/: helpers.py  phishtank.py
phishtank/default/: __init__.py  exceptions.py  helpers.py
tools/: validate_config_files.py
website/web/: __init__.py  helpers.py
