[project]
name = "phishtank"
version = "1.4.0"
description = "Simple Tool to query a local Phishtank database"
authors = [{name="Raphaël Vinot", email="raphael.vinot@circl.lu"}]
license = "BSD-3-Clause"
readme = "README.md"
requires-python = "^3.9.2"

dependencies = [
    "redis[hiredis] (>=5.3.0,<6.0.0)",
    "werkzeug (>=3.1.3)",
    "flask-restx (>=1.3.0)",
    "gunicorn[setproctitle] (>=23.0.0)",
    "pyphishtanklookup (>=1.4.1)"
]

[project.scripts]
start = "bin.start:main"
stop = "bin.stop:main"
update = "bin.update:main"
importer = "bin.importer:main"
shutdown = "bin.shutdown:main"
run_backend = "bin.run_backend:main"
start_website = "bin.start_website:main"

[tool.poetry.group.dev.dependencies]
mypy = "^1.16.1"
types-redis = "^4.6.0.20241004"
types-requests = "^2.32.4.20250611"
pytest-cov = "^6.2.1"

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"
